# picross

./: Cargo.toml  README.md  TODO.md  start.bat  start.sh
assets/: assets.xcf
docs/: game.js  game.wasm  index.html  picross.js  picross.wasm  style.css
src/: input.rs  main.rs  picross.rs  renderer.rs
src/html/: intro.html  picross.html
static/: index.html  style.css
