[package]
name = "picross"
version = "0.1.0"
authors = ["mich101mich <mich101mich@gmail.com>"]
edition = "2018"

[dependencies]
stdweb = "0.4.18"
serde_json = "1.0.40"
serde_repr = "0.1.5"
url = "2.1.0"

[dependencies.rand]
version = "0.7.2"
features = ["stdweb"]

[dependencies.serde]
version = "1.0.101"
features = ["derive"]

[target.'cfg(not(cargo_web))'.dependencies]
wasm-bindgen = "0.2.50"

[target.'cfg(debug_assertions)'.dependencies]
console_error_panic_hook = "0.1.6"
